--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: albert.adel007@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     Albert writes down what he thinks to be written down.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://albertmundu.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://albertmundu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: albertmundu
 github_username:  albertmundu
 
